K1J-511: Cleaning for sonar